--- a/hugo.toml
+++ b/hugo.toml
@@ -7,6 +7,7 @@ enableEmoji = true
 enableInlineShortcodes = true
 pygmentsCodeFences = true
 pygmentsUseClasses = true
+pygmentsStyle = "pastie"
 
 theme = 'github-style'
 # theme = 'anotale-ext'
