--- a/hugo.toml
+++ b/hugo.toml
@@ -21,7 +21,7 @@ enableGitInfo = true
   twitter = 'ac1965'
   facebook = 'ac1965'
   instagram = 'tjy1965'
-  email = 'ac1965@gmail.com'
+  email = 'tjy1965@gmail.com'
   url = 'https://ty07.net'
   rss = true
   lastmod = true
