--- a/hugo.toml
+++ b/hugo.toml
@@ -2,19 +2,24 @@ baseURL = 'https://www.ty07.net'
 DefaultContentLanguage = 'ja'
 languageCode = 'ja-jp'
 title = 'Not Good Father'
+
+buildDrafts = false
+buildFuture = false
+buildExpired = false
+
 pagenate = 5
+enableRobotsTXT = true
 enableEmoji = true
 enableInlineShortcodes = true
+enableGitInfo = true
 pygmentsCodeFences = true
 pygmentsUseClasses = true
 pygmentsStyle = 'pastie'
 
-theme = 'github-style'
+theme = ['github-style']
 # theme = 'anotale-ext'
 # theme = 'PaperMod'
 
-# theme 'github-style
-enableGitInfo = true
 [Params]
   description = 'The sound, old pond and frog jump into water.'
   author = 'YAMASHITA, Takao'
