--- a/hugo.toml
+++ b/hugo.toml
@@ -16,8 +16,8 @@ pygmentsCodeFences = true
 pygmentsUseClasses = true
 pygmentsStyle = 'pastie'
 
-theme = ['github-style']
-# theme = 'anotale-ext'
+theme = ['github-style', 'PaperMod', 'anatole']
+# btheme = 'anotale'
 # theme = 'PaperMod'
 
 [Params]
