--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "themes/anatole"]
 	path = themes/anatole
 	url = https://github.com/lxndrblz/anatole
+[submodule "themes/anatole-ext"]
+	path = themes/anatole-ext
+	url = https://github.com/ac1965/anatole-ext.git
