--- a/config/PaperMod/params.toml
+++ b/config/PaperMod/params.toml
@@ -3,7 +3,7 @@ title = "No Good Father"
 author = "YAMASHITA, Takao"
 #copyright = "2020-2021"
 description = "The sound, old pond and frog jump into water."
-profilePicture = "images/avator.png"
+profilePicture = "images/avatar.png"
 keywords = ""
 favicon = "favicons/"
 # example ["css/custom.css"]
@@ -11,7 +11,7 @@ customCss = []
 # example ["js/custom.js"]
 customJs = []
 mainSections = ["post"]
-images = ["images/avator.png"]
+images = ["images/avatar.png"]
 doNotLoadAnimations = false
 # Form Spree Contact Form
 #contactFormAction = "https://formspree.io/f/your-form-hash-here"
@@ -20,9 +20,6 @@ doNotLoadAnimations = false
 #googleFonts = ["Indie+Flower", "Roboto:ital,wght@0,100;0,400;0,700;1,400"]
 # Google Site Verify
 #googleSiteVerify = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
-singleDateFormat = "2006/2/1"
-indexDateFormat = "2006/2/1"
-listDateFormat = "2006/2/1"
 # Commento Comments
 # CommentoURL = "https://commento.example.com/js/commento.js"
 # Read More links for truncated summaries
@@ -31,6 +28,20 @@ listDateFormat = "2006/2/1"
 # relatedPosts = true
 # numberOfRelatedPosts = 3
 
+# defaultTheme = auto
+# disableThemeToggle: true
+ShowShareButtons = true
+ShowReadingTime = true
+# disableSpecial1stPost: true
+displayFullLangName = true
+ShowPostNavLinks = true
+ShowBreadCrumbs = true
+ShowCodeCopyButtons = true
+ShowRssButtonInSectionTermList = true
+
+ShowAllPagesInArchive = true
+ShowPageNums = true
+ShowToc = true
 
 reversepagetitle = true # When set to 'true', the Window Title will be reversed to 'Title | Author' instead of the default 'Author | Title'
 
