--- a/config/_default/menus.ja.toml
+++ b/config/_default/menus.ja.toml
@@ -1,23 +1,29 @@
   [[main]]
-  name = "Home"
-  identifier = "home"
+  name = "Archives"
+  identifier = "archives"
   weight = 100
-  url = "/"
+  url = "/archives/"
 
   [[main]]
-  name = "Archives"
+  name = "Posts"
   weight = 200
   identifier = "posts"
   url = "/post/"
 
   [[main]]
-  name = "Tags"
+  name = "Search"
   weight = 300
+  identifier = "search"
+  url = "/search/"
+
+  [[main]]
+  name = "Tags"
+  weight = 400
   identifier = "tags"
   url = "/tags/"
 
   [[main]]
   name = "About"
-  weight = 400
+  weight = 500
   identifier = "about"
-  url = "/about/"
+  url = "/readme/"
