--- a/config/anatole/config.toml
+++ b/config/anatole/config.toml
@@ -8,6 +8,9 @@ theme = 'anatole'
 summarylength = 10
 enableEmoji = true
 enableRobotsTXT = true
+enableInlineShortcodes = true
+enableGitInfo = true
+hasCJKLanguage = true
 
 # Enable Disqus
 #disqusShortname = ""
