--- a/config/PaperMod/params.toml
+++ b/config/PaperMod/params.toml
@@ -89,3 +89,7 @@ url = "mailto:mail@example.com"
 
 [mermaid]
 # enable = true
+
+[homeInfoParams]
+Title = "The sound, old pond and frog jump into water."
+Contens = ""
