--- a/config/anatole/menus.ja.toml
+++ b/config/anatole/menus.ja.toml
@@ -17,7 +17,7 @@
   url = "/tags/"
 
   [[main]]
-  name = "ReadMe"
+  name = "About"
   weight = 400
-  identifier = "readme"
+  identifier = "about"
   url = "/readme/"
