--- a/config/PaperMod/config.toml
+++ b/config/PaperMod/config.toml
@@ -11,6 +11,8 @@ summarylength = 10
 enableEmoji = true
 enableInlineShortcodes = true
 enableRobotsTXT = true
+hasCJKLanguage = true
+enableGitInfo = true
 
 # Enable Disqus
 #disqusShortname = ""
