--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -3,7 +3,7 @@ DefaultContentLanguage = 'ja'
 languageCode = 'ja-jp'
 title = 'Not Good Father'
 
-theme = 'PaperMod'
+theme = 'github-style'
 
 paginate = 5
 
@@ -11,6 +11,8 @@ summarylength = 10
 enableEmoji = true
 enableInlineShortcodes = true
 enableRobotsTXT = true
+hasCJKLanguage = true
+enableGitInfo = true
 
 # Enable Disqus
 #disqusShortname = ""
