--- a/config/anatole/params.toml
+++ b/config/anatole/params.toml
@@ -28,6 +28,20 @@ doNotLoadAnimations = false
 # relatedPosts = true
 # numberOfRelatedPosts = 3
 
+# defaultTheme = auto
+# disableThemeToggle: true
+ShowShareButtons = true
+ShowReadingTime = true
+# disableSpecial1stPost: true
+displayFullLangName = true
+ShowPostNavLinks = true
+ShowBreadCrumbs = true
+ShowCodeCopyButtons = true
+ShowRssButtonInSectionTermList = true
+
+ShowAllPagesInArchive = true
+ShowPageNums = true
+ShowToc = true
 
 reversepagetitle = true # When set to 'true', the Window Title will be reversed to 'Title | Author' instead of the default 'Author | Title'
 
@@ -75,3 +89,7 @@ url = "mailto:mail@example.com"
 
 [mermaid]
 # enable = true
+
+[homeInfoParams]
+Title = "The sound, old pond and frog jump into water."
+Contens = ""
