--- a/config/github-style/params.toml
+++ b/config/github-style/params.toml
@@ -3,14 +3,12 @@ title = "No Good Father"
 author = "YAMASHITA, Takao"
 #copyright = "2020-2021"
 description = "The sound, old pond and frog jump into water."
-profilePicture = "images/avator.png"
 keywords = ""
 # example ["css/custom.css"]
 customCss = []
 # example ["js/custom.js"]
 customJs = []
 mainSections = ["post"]
-images = ["images/avator.png"]
 doNotLoadAnimations = false
 # Form Spree Contact Form
 #contactFormAction = "https://formspree.io/f/your-form-hash-here"
@@ -19,9 +17,6 @@ doNotLoadAnimations = false
 #googleFonts = ["Indie+Flower", "Roboto:ital,wght@0,100;0,400;0,700;1,400"]
 # Google Site Verify
 #googleSiteVerify = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
-singleDateFormat = "2006/2/1"
-indexDateFormat = "2006/2/1"
-listDateFormat = "2006/2/1"
 # Commento Comments
 # CommentoURL = "https://commento.example.com/js/commento.js"
 # Read More links for truncated summaries
@@ -29,6 +24,25 @@ listDateFormat = "2006/2/1"
 # postSectionName = "blog"
 # relatedPosts = true
 # numberOfRelatedPosts = 3
+
+# defaultTheme = auto
+# disableThemeToggle: true
+ShowShareButtons = true
+ShowReadingTime = true
+# disableSpecial1stPost: true
+displayFullLangName = true
+ShowPostNavLinks = true
+ShowBreadCrumbs = true
+ShowCodeCopyButtons = true
+ShowRssButtonInSectionTermList = true
+
+ShowAllPagesInArchive = true
+ShowPageNums = true
+ShowToc = true
+
+reversepagetitle = true # When set to 'true', the Window Title will be reversed to 'Title | Author' instead of the default 'Author | Title'
+
+# hidesidebar = true
 
 github = 'ac1965'
 twitter = 'ac1965'
@@ -43,10 +57,6 @@ avatar = '/images/avatar.png'
 headerIcon = '/images/GitHub-Mark-Light-32px.png'
 location = 'Japan, /dev/urandom'
 enableGitalk = false
-
-reversepagetitle = true # When set to 'true', the Window Title will be reversed to 'Title | Author' instead of the default 'Author | Title'
-
-# hidesidebar = true
 
 [simpleAnalytics]
 # enable = true
