--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -3,12 +3,15 @@ title = "No Good Father"
 author = "YAMASHITA, Takao"
 #copyright = "2020-2021"
 description = "The sound, old pond and frog jump into water."
+logo = "/images/avatar.png"
 keywords = ""
+favicon = "favicons/"
 # example ["css/custom.css"]
 customCss = []
 # example ["js/custom.js"]
 customJs = []
 mainSections = ["post"]
+images = ["images/avatar.png"]
 doNotLoadAnimations = false
 # Form Spree Contact Form
 #contactFormAction = "https://formspree.io/f/your-form-hash-here"
@@ -44,20 +47,6 @@ reversepagetitle = true # When set to 'true', the Window Title will be reversed 
 
 # hidesidebar = true
 
-github = 'ac1965'
-twitter = 'ac1965'
-facebook = 'ac1965'
-instagram = 'tjy1965'
-email = 'tjy1965@gmail.com'
-url = 'https://www.ty07.net'
-rss = true
-lastmod = true
-favicon = '/images/github.com'
-avatar = '/images/avatar.png'
-headerIcon = '/images/GitHub-Mark-Light-32px.png'
-location = 'Japan, /dev/urandom'
-enableGitalk = false
-
 [simpleAnalytics]
 # enable = true
 # customurl = "https://analytics.example.com"
@@ -75,3 +64,32 @@ enableGitalk = false
 [math]
 enable = false  # options: true, false. Enable math support globally, default: false. You can always enable math on per page.
 use = "katex"  # options: "katex", "mathjax". default is "katex".
+
+## Social links
+# use 'fab' when brand icons, use 'fas' when standard solid icons.
+[[socialIcons]]
+icon = "fab fa-linkedin"
+title = "Linkedin"
+url = "https://de.linkedin.com/"
+
+[[socialIcons]]
+icon = "fab fa-github"
+title = "GitHub"
+url = "https://github.com/lxndrblz/anatole/"
+
+[[socialIcons]]
+icon = "fab fa-instagram"
+title = "instagram"
+url = "https://www.instagram.com/"
+
+[[socialIcons]]
+icon = "fas fa-envelope"
+title = "e-mail"
+url = "mailto:mail@example.com"
+
+[mermaid]
+# enable = true
+
+[homeInfoParams]
+Title = "The sound, old pond and frog jump into water."
+Contens = ""
