--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -54,7 +54,7 @@ rss = true
 lastmod = true
 favicon = '/images/github.com'
 avatar = '/images/avatar.png'
-headerIcon = '/images/GitHub-Mark-Light-32px.png'
+headerIcon = '/images/headerIcon-32px.png'
 location = 'Japan, /dev/urandom'
 enableGitalk = true
 
