--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "themes/github-style"]
 	path = themes/github-style
-	url = https://github.com/MeiK2333/github-style.git
+	url = https://github.com/ac1965/github-style.git
 [submodule "themes/PaperMod"]
 	path = themes/PaperMod
 	url = https://github.com/adityatelange/hugo-PaperMod
