--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -51,7 +51,7 @@ instagram = 'tjy1965'
 email = 'tjy1965@gmail.com'
 url = 'https://www.ty07.net'
 rss = true
-lastmod = true
+lastmod = false
 favicon = '/images/github.com'
 avatar = '/images/avatar.png'
 headerIcon = '/images/GitHub-Mark-Light-32px.png'
